# Stellaris-MultiGalaxy-Generator

./: CMakeLists.txt
Dependencies/SDL_image/: sdl2_image-config.cmake
Stellaris MultiGalaxy Generator/: CMakeLists.txt  Stellaris MultiGalaxy Generator.cpp  Stellaris MultiGalaxy Generator.h
Stellaris MultiGalaxy Generator/Headers/: Classes_Declarations.h  base.h  buttons.h  graphics_engine.h  init_textures.h  smgg_namespace.h  smgg_pointers_namespace.h  window_init.h
Stellaris MultiGalaxy Generator/Source/: application_modules.cpp  base.cpp  button_data.h  buttons.cpp  buttons_events.cpp  debug.cpp  graphics_engine.cpp  init_textures.cpp  smgg_namespaces.h  window_init.cpp
